--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -3,10 +3,9 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<Nullable>enable</Nullable>
-		<LangVersion>9</LangVersion>
 		<PackageId>ZeroCode.PasswordGenerator</PackageId>
 		<Title>Password Generator</Title>
-		<Version>1.0.0-rc.1</Version>
+		<Version>1.0.0</Version>
 		<Authors>ZeroCode</Authors>
 		<Company>ZeroCode</Company>
 		<Product>ZeroCode.PasswordGenerator</Product>
@@ -14,6 +13,22 @@
 		<RepositoryUrl>https://github.com/Z3roTech/PasswordGenerator</RepositoryUrl>
 		<PackageTags>library; password; generator;</PackageTags>
 		<PackageOutputPath>bin\package</PackageOutputPath>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Include="..\LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 
 </Project>
